# yajl-rs

./: Cargo.toml  Makefile
.github/workflows/: test.yml
crates/yajl-clib/: Cargo.toml
crates/yajl-clib/src/: lib.rs  yajl_gen.rs
crates/yajl/src/: lib.rs  yajl_alloc.rs  yajl_buf.rs  yajl_gen.rs  yajl_lex.rs  yajl_parser.rs  yajl_tree.rs
examples/json-reformat/: Cargo.toml
examples/json-reformat/src/: main.rs
examples/json-verify/: Cargo.toml
examples/json-verify/src/: main.rs
examples/parse-config/: Cargo.toml
examples/parse-config/src/: main.rs
examples/perftest/: Cargo.toml
examples/perftest/src/: documents.rs  main.rs
examples/yajl_test/src/: main.rs
