[workspace]
resolver = "2"
members = [
    "crates/yajl",
    "crates/yajl-clib",
    "examples/yajl_test",
    "examples/perftest", "examples/parse-config", "examples/json-verify", "examples/json-reformat",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.74.0"

[workspace.dependencies]
yajl = { path = "crates/yajl" }

# external crates
libc = "0.2.161"
